; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn20/extr_dcn20_optc.c_optc2_set_dwb_source.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dcn20/extr_dcn20_optc.c_optc2_set_dwb_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timing_generator = type { i32 }
%struct.optc = type { i32 }

@DWB_SOURCE_SELECT = common dso_local global i32 0, align 4
@OPTC_DWB0_SOURCE_SELECT = common dso_local global i32 0, align 4
@OPTC_DWB1_SOURCE_SELECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @optc2_set_dwb_source(%struct.timing_generator* %0, i32 %1) #0 {
  %3 = alloca %struct.timing_generator*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.optc*, align 8
  store %struct.timing_generator* %0, %struct.timing_generator** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.timing_generator*, %struct.timing_generator** %3, align 8
  %7 = call %struct.optc* @DCN10TG_FROM_TG(%struct.timing_generator* %6)
  store %struct.optc* %7, %struct.optc** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load i32, i32* @DWB_SOURCE_SELECT, align 4
  %12 = load i32, i32* @OPTC_DWB0_SOURCE_SELECT, align 4
  %13 = load %struct.timing_generator*, %struct.timing_generator** %3, align 8
  %14 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @REG_UPDATE(i32 %11, i32 %12, i32 %15)
  br label %28

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %20, label %27

20:                                               ; preds = %17
  %21 = load i32, i32* @DWB_SOURCE_SELECT, align 4
  %22 = load i32, i32* @OPTC_DWB1_SOURCE_SELECT, align 4
  %23 = load %struct.timing_generator*, %struct.timing_generator** %3, align 8
  %24 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @REG_UPDATE(i32 %21, i32 %22, i32 %25)
  br label %27

27:                                               ; preds = %20, %17
  br label %28

28:                                               ; preds = %27, %10
  ret void
}

declare dso_local %struct.optc* @DCN10TG_FROM_TG(%struct.timing_generator*) #1

declare dso_local i32 @REG_UPDATE(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
